--- a/QLKS_NHOM1/QLKS_NHOM1/GUI/fMain.resx
+++ b/QLKS_NHOM1/QLKS_NHOM1/GUI/fMain.resx
@@ -714,4 +714,7 @@
         kj91yjvk31XLQxP/2Q==
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>35</value>
+  </metadata>
 </root>
