--- a/QLKS_NHOM1/QLKS_NHOM1/Properties/Resources.resx
+++ b/QLKS_NHOM1/QLKS_NHOM1/Properties/Resources.resx
@@ -118,4 +118,91 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="anh3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh3.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh4.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh18" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh18.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh10.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh5.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh17" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh17.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh1.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh12.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh16.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh11.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh21" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh21.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh9.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh14" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh14.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh6.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh29" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh29.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh2.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh25" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh25.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh7.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh15" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh15.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh22" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh22.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh20.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh19" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh19.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh26" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh26.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh28" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh28.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh23" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh23.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh27" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh27.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh13" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh13.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh8.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="anh30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\anh30.PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
